# i2cbright

./: .gitignore  README.md  pyproject.toml
data/: 00-i2cbright.rules
src/: i2cbright.py
